chore: use modern HttpClient for /stream endpoint
Maybe in the future we should maintain a single HttpClient for requests.